--- a/src/Calculator/Views/CalculatorScientificOperators.xaml
+++ b/src/Calculator/Views/CalculatorScientificOperators.xaml
@@ -280,13 +280,16 @@
         <controls:OverflowListView Grid.ColumnSpan="5">
             <Button x:Name="trigButton" Style="{StaticResource OverflowButtonStyle}">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Margin="6,2,6,0"
-                               FontFamily="{StaticResource CalculatorFontFamily}"
-                               Text="&#xF1AA;"/>
+                    <FontIcon Margin="6,0,6,0"
+                              FontFamily="{StaticResource CalculatorFontFamily}"
+                              FontSize="12"
+                              Glyph="&#xF1AA;"/>
                     <TextBlock Text="TRIG"/>
-                    <TextBlock Margin="6,3,6,0"
-                               FontFamily="{StaticResource CalculatorFontFamily}"
-                               Text="&#xE70D;"/>
+                    <FontIcon Margin="6,0,6,0"
+                              VerticalAlignment="Center"
+                              FontFamily="{StaticResource CalculatorFontFamily}"
+                              FontSize="12"
+                              Glyph="&#xE70D;"/>
                 </StackPanel>
                 <Button.Flyout>
                     <Flyout x:Name="Trigflyout"
@@ -623,13 +626,17 @@
             </Button>
             <Button x:Name="funcButton" Style="{StaticResource OverflowButtonStyle}">
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Margin="6,2,6,0"
-                               FontFamily="{StaticResource CalculatorFontFamily}"
-                               Text="&#xF1AA;"/>
-                    <TextBlock Text="FUNCTIONS"/>
-                    <TextBlock Margin="6,3,6,0"
-                               FontFamily="{StaticResource CalculatorFontFamily}"
-                               Text="&#xE70D;"/>
+                    <FontIcon Margin="6,0,6,0"
+                              VerticalAlignment="Center"
+                              FontFamily="{StaticResource CalculatorFontFamily}"
+                              FontSize="12"
+                              Glyph="&#xF1AA;"/>
+                    <TextBlock VerticalAlignment="Center" Text="FUNCTIONS"/>
+                    <FontIcon Margin="6,0,6,0"
+                              VerticalAlignment="Center"
+                              FontFamily="{StaticResource CalculatorFontFamily}"
+                              FontSize="12"
+                              Glyph="&#xE70D;"/>
                 </StackPanel>
                 <Button.Flyout>
                     <Flyout x:Name="FuncFlyout"
